Simplify reconstructPath: use LinkedList.addFirst to avoid reverse
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>